Took out unnecessary references to unused js files.

--- a/card-template.html
+++ b/card-template.html
@@ -3,7 +3,6 @@
 <head>
  <!-- <link rel="stylesheet" href="burgermenu.css"> -->
  <link rel="stylesheet" href="cardstack.css">
- <link rel="icon" type="image/x-icon" href="../favicon.ico">
  <meta charset="utf-8">
  <meta name="keywords" content="Mikk-Mait Kivi, Portfolio, Visual Art">
  <meta name="description" content="Some visual testing of art and coding.">
@@ -34,9 +33,9 @@
    <div class="bottom right card-bg" id="4">
     <div class="identifier" id="04"></div></div>
   </div>
-  <script src="../js/utils.js"></script>
+  <!-- <script src="../js/utils.js"></script> -->
   <script src="card-deal.js"></script>
-  <script src="../js/test.js"></script>
+  <!-- <script src="../js/test.js"></script> -->
  </div>
 </body>
 </html>
